objects/WRFSegment__c.object
<CustomObject>
    <fields>
        <fullName>DataFileName__c</fullName>
        <label>Data File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeploymentDate__c</fullName>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DesiredQuantity__c</fullName>
        <label>Desired Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailOptOutFileName__c</fullName>
        <label>Email Opt Out File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailOptOutFileQuantity__c</fullName>
        <label>Email Opt Out File Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FromText__c</fullName>
        <inlineHelpText>From Text (up to 50 characters)</inlineHelpText>
        <label>From Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTMLCreativeFileName__c</fullName>
        <label>HTML Creative File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameAddressSuppressionFileName__c</fullName>
        <inlineHelpText>If Vendor Performing Suppression. If Production Performing Suppression, this can remain blank.</inlineHelpText>
        <label>Name/Address Suppression File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameAddressSuppressionFileQuantity__c</fullName>
        <label>Name/Address Suppression File Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherSegmentDetails__c</fullName>
        <formula>BR()+&apos;Data File Name: &apos;+  DataFileName__c + BR()+
&apos;HTML Creative File Name: &apos;+ HTMLCreativeFileName__c + BR()+
&apos;From Text: &apos;+ FromText__c + BR()+
&apos;Subject Line: &apos; +SubjectLine__c + BR()+
&apos;Pre-Text Header: &apos;+ PreTextHeader__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Segment Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherSpecialInstructions__c</fullName>
        <inlineHelpText>Other Special Instructions or Requirements (Please provide details)</inlineHelpText>
        <label>Other Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreTextHeader__c</fullName>
        <inlineHelpText>Pre-Text Header (up to 60 characters)</inlineHelpText>
        <label>Pre-Text Header</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityInDatafile__c</fullName>
        <label>Quantity In Data file</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubjectLine__c</fullName>
        <inlineHelpText>Subject Line (up to 60 characters)</inlineHelpText>
        <label>Subject Line</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Request Form</label>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Segment</label>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>